--- a/esp/light_box/platformio.ini
+++ b/esp/light_box/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = wemos_d1_mini32
 framework = arduino
-lib_deps = adafruit/Adafruit NeoPixel@^1.7.0
+lib_deps = 
+	ESP Async WebServer
+	adafruit/Adafruit NeoPixel 
