--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install platformio
     - name: Run PlatformIO build on selected platforms
-      run: platformio run -e wemos_d1_mini32
+      run: platformio run --environment wemos_d1_mini32  --project-dir ./esp/light_box
 
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v1-release
