--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
       uses: svenstaro/upload-release-action@v1-release
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ./esp/light_box/.pio/build/*/firmware_*.bin
+        file: ./esp/light_box/.pio/build/*/firmware.bin
         tag: ${{ github.ref }}
         overwrite: true
         file_glob: true
